add ipynb clipboard function

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -10,28 +10,64 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "id": "f43a26af-ea59-43a1-b3a4-d7b24c366367",
       "metadata": {
+        "execution": {
+          "iopub.execute_input": "2022-12-20T16:41:24.288183Z",
+          "iopub.status.busy": "2022-12-20T16:41:24.287746Z",
+          "iopub.status.idle": "2022-12-20T16:41:24.797270Z",
+          "shell.execute_reply": "2022-12-20T16:41:24.796074Z",
+          "shell.execute_reply.started": "2022-12-20T16:41:24.288145Z"
+        },
         "scrolled": true,
         "tags": [],
         "collapsed": true
       },
       "outputs": [],
       "source": [
-        "!pip install black[jupyter] # black \u7684 Jupyter \u6269\u5c55, \u81ea\u52a8\u683c\u5f0f\u5316 Python \u4ee3\u7801\u3002\u8981\u4f7f\u7528 black \u8fdb\u884c\u683c\u5f0f\u5316\uff0c\u8bf7\u5728\u547d\u4ee4\u884c\u4e2d\u8fd0\u884c\u4ee5\u4e0b\u547d\u4ee4\uff1ablack <filename>.ipynb\n",
-        "!pip install wget\n",
-        "!pip install transformers\n",
-        "!pip install bitsandbytes\n",
-        "!pip install jax\n",
-        "!pip install xformers\n",
-        "!pip install triton==2.0.0.dev20221120\n",
-        "!pip install accelerate==0.12.0\n",
-        "!apt-get update\n",
-        "!apt-get install -y p7zip-full\n",
-        "!apt-get install -y iputils-ping\n",
-        "!apt-get install -y git-lfs\n",
-        "# !pip install -r requirements.txt"
+        "import subprocess\n",
+        "\n",
+        "libraries_to_install = [\n",
+        "    \"black[jupyter]\",\n",
+        "    \"wget\",\n",
+        "    \"transformers\",\n",
+        "    \"bitsandbytes\",\n",
+        "    \"jax\",\n",
+        "    \"xformers\",\n",
+        "    \"triton==2.0.0.dev20221120\"\n",
+        "]\n",
+        "\n",
+        "tools_to_install = [\n",
+        "    \"p7zip-full\",\n",
+        "    \"iputils-ping\",\n",
+        "    \"git-lfs\"\n",
+        "]\n",
+        "\n",
+        "installed_libraries = subprocess.run([\"pip\", \"freeze\"], capture_output=True).stdout.decode().split(\"\\n\")\n",
+        "\n",
+        "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5e93\n",
+        "for library in libraries_to_install:\n",
+        "    if library == \"black[jupyter]\" and any(\"black\" in installed_library for installed_library in installed_libraries):\n",
+        "        continue\n",
+        "    elif not any(library in installed_library for installed_library in installed_libraries):\n",
+        "        !pip install $library\n",
+        "    print(f\"\u3010 {library} \u3011 already installed, skipping installation\")\n",
+        "        \n",
+        "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5de5\u5177\n",
+        "update_needed = False\n",
+        "for tool in tools_to_install:\n",
+        "    exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "    if exit_code != 0:\n",
+        "        update_needed = True\n",
+        "        break\n",
+        "    if update_needed:\n",
+        "        !apt-get update\n",
+        "        for tool in tools_to_install:\n",
+        "            exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "            if exit_code != 0:\n",
+        "                !apt-get install -y $tool\n",
+        "    \n"
       ]
     },
     {
@@ -44,9 +80,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "411362b2-a1e3-4c92-b774-e97365554cb2",
       "metadata": {
+        "execution": {
+          "iopub.execute_input": "2022-12-20T08:28:21.260173Z",
+          "iopub.status.busy": "2022-12-20T08:28:21.260000Z",
+          "iopub.status.idle": "2022-12-20T08:28:21.704021Z",
+          "shell.execute_reply": "2022-12-20T08:28:21.703368Z",
+          "shell.execute_reply.started": "2022-12-20T08:28:21.260156Z"
+        },
         "tags": [],
         "collapsed": true
       },
@@ -68,9 +111,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "875e96c2-0706-4e04-813c-bf4a02a40017",
       "metadata": {
+        "execution": {
+          "iopub.execute_input": "2022-12-20T15:55:47.081967Z",
+          "iopub.status.busy": "2022-12-20T15:55:47.081790Z",
+          "iopub.status.idle": "2022-12-20T15:55:47.868207Z",
+          "shell.execute_reply": "2022-12-20T15:55:47.867071Z",
+          "shell.execute_reply.started": "2022-12-20T15:55:47.081950Z"
+        },
         "tags": [],
         "collapsed": true
       },
@@ -142,9 +192,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "0d2db384-8a43-4650-be96-af090b779f06",
       "metadata": {
+        "execution": {
+          "iopub.execute_input": "2022-12-20T15:55:47.870310Z",
+          "iopub.status.busy": "2022-12-20T15:55:47.870043Z",
+          "iopub.status.idle": "2022-12-20T15:55:47.890073Z",
+          "shell.execute_reply": "2022-12-20T15:55:47.889496Z",
+          "shell.execute_reply.started": "2022-12-20T15:55:47.870282Z"
+        },
         "tags": [],
         "collapsed": true
       },
@@ -234,9 +291,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 6,
       "id": "bec6d7ce-56a8-48ab-873b-16a64c39f0f7",
       "metadata": {
+        "execution": {
+          "iopub.execute_input": "2022-12-20T15:55:47.891587Z",
+          "iopub.status.busy": "2022-12-20T15:55:47.891345Z",
+          "iopub.status.idle": "2022-12-20T15:55:47.902859Z",
+          "shell.execute_reply": "2022-12-20T15:55:47.902279Z",
+          "shell.execute_reply.started": "2022-12-20T15:55:47.891568Z"
+        },
         "tags": [],
         "collapsed": true
       },
@@ -281,13 +345,13 @@
         "        symlink_name='stable-diffusion-v2-768' # \u6a21\u578b\u540d\u79f0\n",
         "    )\n",
         "\n",
-        "    # \u514d\u5b89\u88c5\uff08\u6302\u8f7d\u6570\u636e\u96c6\uff09DreamBooth\u6240\u9700\u4f9d\u8d56\uff08\u80fd\u591f\u7701\u6389fast-DreamBooth\u4e2d\u7684\u7b2c\u4e00\u4e2a\u73af\u8282\uff09\n",
-        "    !rm -rf /usr/local/lib/python3.8/dist-packages\n",
-        "    create_symlink(\n",
-        "        source_path='/input1/local/lib/python3.8/dist-packages', \n",
-        "        symlink_path='/usr/local/lib/python3.8',\n",
-        "        symlink_name='dist-packages' \n",
-        "    )\n",
+        "    # # \u514d\u5b89\u88c5\uff08\u6302\u8f7d\u6570\u636e\u96c6\uff09DreamBooth\u6240\u9700\u4f9d\u8d56\uff08\u80fd\u591f\u7701\u6389fast-DreamBooth\u4e2d\u7684\u7b2c\u4e00\u4e2a\u73af\u8282\uff09\n",
+        "    # !rm -rf /usr/local/lib/python3.8/dist-packages\n",
+        "    # create_symlink(\n",
+        "    #     source_path='/input1/local/lib/python3.8/dist-packages', \n",
+        "    #     symlink_path='/usr/local/lib/python3.8',\n",
+        "    #     symlink_name='dist-packages' \n",
+        "    # )\n",
         "\n",
         "    # \u56e0\u4e3a\u9ed8\u8ba4\u7684Sessions\u8def\u5f84\u592a\u6df1\uff08\u539f\u4f5c\u8005\u662f\u4e3a\u4e86Colab\u800c\u8bbe\u8ba1\u7684\uff09\uff0c\u6240\u4ee5\u8981\u5728\u6839\u76ee\u5f55\u521b\u5efa\u4e00\u4e2a\u94fe\u63a5\u5230Sessions\u7684\u5feb\u6377\u65b9\u5f0f\n",
         "    create_symlink(\n",
@@ -323,9 +387,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "48f1f509-510c-4ce0-b568-2ea6aa9c6057",
       "metadata": {
+        "execution": {
+          "iopub.execute_input": "2022-12-20T08:28:22.295676Z",
+          "iopub.status.busy": "2022-12-20T08:28:22.295451Z",
+          "iopub.status.idle": "2022-12-20T08:28:33.616506Z",
+          "shell.execute_reply": "2022-12-20T08:28:33.615903Z",
+          "shell.execute_reply.started": "2022-12-20T08:28:22.295659Z"
+        },
         "tags": [],
         "collapsed": true
       },
@@ -358,9 +429,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 85,
       "id": "73aec890-1745-4f77-b3bc-af98d1726554",
       "metadata": {
+        "execution": {
+          "iopub.execute_input": "2022-12-20T17:47:02.171693Z",
+          "iopub.status.busy": "2022-12-20T17:47:02.171447Z",
+          "iopub.status.idle": "2022-12-20T17:47:02.202844Z",
+          "shell.execute_reply": "2022-12-20T17:47:02.202275Z",
+          "shell.execute_reply.started": "2022-12-20T17:47:02.171673Z"
+        },
         "tags": [],
         "collapsed": true
       },
@@ -389,7 +467,8 @@
         "    if env_name==\"OpenBayes\":\n",
         "        # \u5220\u9664\u6307\u5b9a\u7684\u5355\u5143\u683c\n",
         "        delList = [\n",
-        "            '@markdown # Dependencies',\n",
+        "            # '@markdown # Dependencies',\n",
+        "            '@markdown #Instance Images', #Instance Images\u8fd9\u4e2acell\u4e5f\u4e0d\u9700\u8981\u4e86\uff0c\u56e0\u4e3a\u672c\u8eab\u5df2\u7ecf\u4ea4\u4ee3\u4e86Session\n",
         "            '@markdown #Concept Images',\n",
         "            'Only if you have trouble connecting to the local server.',\n",
         "            \"@markdown - [Create a write access token](https://huggingface.co/settings/tokens) \",\n",
@@ -524,6 +603,84 @@
     },
     {
       "cell_type": "markdown",
+      "id": "93d7aa28-a495-4001-90f2-2b8e1aa57744",
+      "metadata": {},
+      "source": [
+        "# \u6839\u636e\u7279\u5f81\u7247\u6bb5\u8fdb\u884c\u6574\u4e2aCell\u7684\u66ff\u6362"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 92,
+      "id": "22b9a0fd-cf24-4d3e-af09-39fbb206d1d4",
+      "metadata": {
+        "execution": {
+          "iopub.execute_input": "2022-12-20T17:49:54.633467Z",
+          "iopub.status.busy": "2022-12-20T17:49:54.632973Z",
+          "iopub.status.idle": "2022-12-20T17:49:54.647299Z",
+          "shell.execute_reply": "2022-12-20T17:49:54.646833Z",
+          "shell.execute_reply.started": "2022-12-20T17:49:54.633431Z"
+        },
+        "tags": [],
+        "collapsed": true
+      },
+      "outputs": [],
+      "source": [
+        "import json\n",
+        "import copy\n",
+        "\n",
+        "def modify_ipynb_file(path_to_modified, path_to_clipboard):\n",
+        "    \"\"\"\n",
+        "    \u4fee\u6539\u88ab\u4fee\u6539\u5bf9\u8c61\u6587\u4ef6\uff0c\u4f7f\u7528\u4ee3\u7801\u526a\u8d34\u677f\u6587\u4ef6\u4e2d\u5177\u6709\u76f8\u540c\u7279\u5f81\u5b57\u7b26\u4e32\u7684Cell\u6765\u66ff\u6362\u3002\n",
+        "    \"\"\"\n",
+        "    # \u8bfb\u53d6\u88ab\u4fee\u6539\u5bf9\u8c61\u548c\u4ee3\u7801\u526a\u8d34\u677f\u6587\u4ef6\n",
+        "    with open(path_to_modified, 'r') as f:\n",
+        "        modified = json.load(f)\n",
+        "    with open(path_to_clipboard, 'r') as f:\n",
+        "        clipboard = json.load(f)\n",
+        "\n",
+        "    # \u7279\u5f81\u5b57\u7b26\u4e32\u5217\u8868\uff0c\u7528\u4e8e\u641c\u7d22\u88ab\u4fee\u6539\u5bf9\u8c61\u6587\u4ef6\u4e2d\u7684Cell\u548c\u4ee3\u7801\u526a\u8d34\u677f\u6587\u4ef6\u4e2d\u7684Cell\n",
+        "    replaceList = [\n",
+        "            '@markdown # Dependencies',\n",
+        "        ]        \n",
+        "    \n",
+        "    # \u904d\u5386\u88ab\u4fee\u6539\u5bf9\u8c61\u6587\u4ef6\u4e2d\u7684\u6240\u6709Cell\n",
+        "    for cell_modified in modified['cells'][:]: # \u5728 Python \u4e2d\uff0c[:] \u53ef\u4ee5\u7528\u6765\u590d\u5236\u4e00\u4e2a\u5217\u8868\n",
+        "        # \u6807\u8bb0\u662f\u5426\u9700\u8981\u66ff\u6362\u5f53\u524dCell\n",
+        "        replace_cell = False\n",
+        "        # \u904d\u5386\u5f53\u524dCell\u7684\u6240\u6709\u884c\n",
+        "        for line_modified in cell_modified['source']:\n",
+        "            # \u5982\u679c\u5f53\u524d\u884c\u5305\u542b\u7279\u5f81\u5b57\u7b26\u4e32\uff0c\u5219\u6807\u8bb0\u9700\u8981\u66ff\u6362\n",
+        "            if any(keyword in line_modified for keyword in replaceList):\n",
+        "                replace_cell = True\n",
+        "                break\n",
+        "        # \u5982\u679c\u6807\u8bb0\u9700\u8981\u66ff\u6362\n",
+        "        if replace_cell:\n",
+        "            # \u904d\u5386\u4ee3\u7801\u526a\u8d34\u677f\u6587\u4ef6\u4e2d\u7684\u6240\u6709Cell\n",
+        "            for cell_clipboard in clipboard['cells'][:]:\n",
+        "                # \u904d\u5386\u5f53\u524dCell\u7684\u6240\u6709\u884c\n",
+        "                for line_clipboard in cell_clipboard['source']:\n",
+        "                    # \u5982\u679c\u5f53\u524d\u884c\u5305\u542b\u7279\u5f81\u5b57\u7b26\u4e32\n",
+        "                    for i, keyword in enumerate(replaceList):\n",
+        "                        if keyword in line_clipboard:\n",
+        "                            # \u4f7f\u7528\u6df1\u62f7\u8d1d\uff08deep copy\uff09\u6765\u66ff\u6362Cell\n",
+        "                            cell_modified['source'] = copy.deepcopy(cell_clipboard['source'])\n",
+        "                            print(f'\u4ee3\u7801\u5355\u5143\u683c\u5305\u542b\u7279\u5f81\u5b57\u7b26\u4e32\u201c{keyword}\u201d\u7684\u5185\u5bb9\u5df2\u88ab\u4ee3\u7801\u526a\u8d34\u677f\u4e2d\u5305\u542b\u76f8\u540c\u7279\u5f81\u5b57\u7b26\u4e32\u7684\u4ee3\u7801\u5355\u5143\u683c\u6240\u66ff\u6362\u3002')\n",
+        "                            break\n",
+        "    # \u5c06\u4fee\u6539\u540e\u7684\u88ab\u4fee\u6539\u5bf9\u8c61\u6587\u4ef6\u5199\u56de\u78c1\u76d8\n",
+        "    with open(path_to_modified, 'w') as f:\n",
+        "        json.dump(modified, f)\n",
+        "\n",
+        "# \u793a\u4f8b\uff1a\u4fee\u6539\u88ab\u4fee\u6539\u5bf9\u8c61\u6587\u4ef6\uff0c\u4f7f\u7528\u4ee3\u7801\u526a\u8d34\u677f\u6587\u4ef6\u4e2d\u7684\u5185\u5bb9\n",
+        "\n",
+        "modify_ipynb_file(\n",
+        "    path_to_modified=newNotebookPath,\n",
+        "    path_to_clipboard='./lib/libForOpenbayes.ipynb'\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "640d9bdb-e926-428d-8ccf-38eacf11ed38",
       "metadata": {},
       "source": [
@@ -532,9 +689,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 87,
       "id": "1f98c0df-b75b-4bf3-ad0f-7181fd4f87f1",
       "metadata": {
+        "execution": {
+          "iopub.execute_input": "2022-12-20T17:47:07.297024Z",
+          "iopub.status.busy": "2022-12-20T17:47:07.296828Z",
+          "iopub.status.idle": "2022-12-20T17:47:07.313097Z",
+          "shell.execute_reply": "2022-12-20T17:47:07.312354Z",
+          "shell.execute_reply.started": "2022-12-20T17:47:07.297006Z"
+        },
         "tags": [],
         "collapsed": true
       },
@@ -597,7 +761,7 @@
         "    \"Session_Name\": \"FuXingHao768\",\n",
         "    \"Crop_size\": 768,\n",
         "    \"Remove_existing_instance_images\": False,\n",
-        "    \"IMAGES_FOLDER_OPTIONAL\": \"/openbayes/home/content/gdrive/MyDrive/Fast-Dreambooth/Sessions/FuXingHao768/instance_images\",\n",
+        "    # \"IMAGES_FOLDER_OPTIONAL\": \"/openbayes/home/content/gdrive/MyDrive/Fast-Dreambooth/Sessions/FuXingHao768/instance_images\",\n",
         "    \"Crop_images\": False,\n",
         "    \"Resolution\": 768,\n",
         "}\n",
@@ -617,9 +781,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 88,
       "id": "cdea68b7-983a-4341-8fed-a2ac19e8fffb",
       "metadata": {
+        "execution": {
+          "iopub.execute_input": "2022-12-20T17:47:08.869667Z",
+          "iopub.status.busy": "2022-12-20T17:47:08.869466Z",
+          "iopub.status.idle": "2022-12-20T17:47:08.886384Z",
+          "shell.execute_reply": "2022-12-20T17:47:08.885844Z",
+          "shell.execute_reply.started": "2022-12-20T17:47:08.869648Z"
+        },
         "tags": [],
         "collapsed": true
       },
@@ -738,16 +909,6 @@
         "\n",
         "# refsColor()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "f3382f6f-2633-4e87-8178-c68f544940aa",
-      "metadata": {
-        "collapsed": true
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
