--- a/dreambooth/fixDreamBooth-Notebook-for-AutoDL.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-AutoDL.ipynb
@@ -12,9 +12,7 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "02cbebbf-0946-481e-924c-6f208d3a4931",
-      "metadata": {
-        "collapsed": true
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "!. activate && conda activate py3.10.6 && \\\n",
@@ -25,9 +23,7 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "b7b3b5bf-6c33-4928-9da6-5f3fb681eefa",
-      "metadata": {
-        "collapsed": true
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "!. activate && conda activate py3.10.6 && \\\n",
@@ -40,8 +36,7 @@
       "id": "f43a26af-ea59-43a1-b3a4-d7b24c366367",
       "metadata": {
         "scrolled": true,
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -78,8 +73,7 @@
       "execution_count": null,
       "id": "411362b2-a1e3-4c92-b774-e97365554cb2",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -102,8 +96,7 @@
       "execution_count": null,
       "id": "875e96c2-0706-4e04-813c-bf4a02a40017",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -178,8 +171,7 @@
       "execution_count": null,
       "id": "0d2db384-8a43-4650-be96-af090b779f06",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -270,8 +262,7 @@
       "execution_count": null,
       "id": "bec6d7ce-56a8-48ab-873b-16a64c39f0f7",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -359,8 +350,7 @@
       "execution_count": null,
       "id": "48f1f509-510c-4ce0-b568-2ea6aa9c6057",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -385,8 +375,7 @@
       "execution_count": null,
       "id": "73aec890-1745-4f77-b3bc-af98d1726554",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -559,8 +548,7 @@
       "execution_count": null,
       "id": "1f98c0df-b75b-4bf3-ad0f-7181fd4f87f1",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -644,8 +632,7 @@
       "execution_count": null,
       "id": "cdea68b7-983a-4341-8fed-a2ac19e8fffb",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -767,9 +754,7 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "f3382f6f-2633-4e87-8178-c68f544940aa",
-      "metadata": {
-        "collapsed": true
-      },
+      "metadata": {},
       "outputs": [],
       "source": []
     }
