--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -10,19 +10,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "id": "f43a26af-ea59-43a1-b3a4-d7b24c366367",
       "metadata": {
-        "execution": {
-          "iopub.execute_input": "2022-12-20T16:41:24.288183Z",
-          "iopub.status.busy": "2022-12-20T16:41:24.287746Z",
-          "iopub.status.idle": "2022-12-20T16:41:24.797270Z",
-          "shell.execute_reply": "2022-12-20T16:41:24.796074Z",
-          "shell.execute_reply.started": "2022-12-20T16:41:24.288145Z"
-        },
         "scrolled": true,
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -80,18 +72,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "411362b2-a1e3-4c92-b774-e97365554cb2",
       "metadata": {
-        "execution": {
-          "iopub.execute_input": "2022-12-20T08:28:21.260173Z",
-          "iopub.status.busy": "2022-12-20T08:28:21.260000Z",
-          "iopub.status.idle": "2022-12-20T08:28:21.704021Z",
-          "shell.execute_reply": "2022-12-20T08:28:21.703368Z",
-          "shell.execute_reply.started": "2022-12-20T08:28:21.260156Z"
-        },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -111,18 +95,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "875e96c2-0706-4e04-813c-bf4a02a40017",
       "metadata": {
-        "execution": {
-          "iopub.execute_input": "2022-12-20T15:55:47.081967Z",
-          "iopub.status.busy": "2022-12-20T15:55:47.081790Z",
-          "iopub.status.idle": "2022-12-20T15:55:47.868207Z",
-          "shell.execute_reply": "2022-12-20T15:55:47.867071Z",
-          "shell.execute_reply.started": "2022-12-20T15:55:47.081950Z"
-        },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -192,18 +168,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "0d2db384-8a43-4650-be96-af090b779f06",
       "metadata": {
-        "execution": {
-          "iopub.execute_input": "2022-12-20T15:55:47.870310Z",
-          "iopub.status.busy": "2022-12-20T15:55:47.870043Z",
-          "iopub.status.idle": "2022-12-20T15:55:47.890073Z",
-          "shell.execute_reply": "2022-12-20T15:55:47.889496Z",
-          "shell.execute_reply.started": "2022-12-20T15:55:47.870282Z"
-        },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -291,18 +259,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "bec6d7ce-56a8-48ab-873b-16a64c39f0f7",
       "metadata": {
-        "execution": {
-          "iopub.execute_input": "2022-12-20T15:55:47.891587Z",
-          "iopub.status.busy": "2022-12-20T15:55:47.891345Z",
-          "iopub.status.idle": "2022-12-20T15:55:47.902859Z",
-          "shell.execute_reply": "2022-12-20T15:55:47.902279Z",
-          "shell.execute_reply.started": "2022-12-20T15:55:47.891568Z"
-        },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -387,18 +347,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "48f1f509-510c-4ce0-b568-2ea6aa9c6057",
       "metadata": {
-        "execution": {
-          "iopub.execute_input": "2022-12-20T08:28:22.295676Z",
-          "iopub.status.busy": "2022-12-20T08:28:22.295451Z",
-          "iopub.status.idle": "2022-12-20T08:28:33.616506Z",
-          "shell.execute_reply": "2022-12-20T08:28:33.615903Z",
-          "shell.execute_reply.started": "2022-12-20T08:28:22.295659Z"
-        },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -429,18 +381,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "id": "73aec890-1745-4f77-b3bc-af98d1726554",
       "metadata": {
-        "execution": {
-          "iopub.execute_input": "2022-12-20T17:47:02.171693Z",
-          "iopub.status.busy": "2022-12-20T17:47:02.171447Z",
-          "iopub.status.idle": "2022-12-20T17:47:02.202844Z",
-          "shell.execute_reply": "2022-12-20T17:47:02.202275Z",
-          "shell.execute_reply.started": "2022-12-20T17:47:02.171673Z"
-        },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -611,18 +555,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "id": "22b9a0fd-cf24-4d3e-af09-39fbb206d1d4",
       "metadata": {
-        "execution": {
-          "iopub.execute_input": "2022-12-20T17:49:54.633467Z",
-          "iopub.status.busy": "2022-12-20T17:49:54.632973Z",
-          "iopub.status.idle": "2022-12-20T17:49:54.647299Z",
-          "shell.execute_reply": "2022-12-20T17:49:54.646833Z",
-          "shell.execute_reply.started": "2022-12-20T17:49:54.633431Z"
-        },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -689,18 +625,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "id": "1f98c0df-b75b-4bf3-ad0f-7181fd4f87f1",
       "metadata": {
-        "execution": {
-          "iopub.execute_input": "2022-12-20T17:47:07.297024Z",
-          "iopub.status.busy": "2022-12-20T17:47:07.296828Z",
-          "iopub.status.idle": "2022-12-20T17:47:07.313097Z",
-          "shell.execute_reply": "2022-12-20T17:47:07.312354Z",
-          "shell.execute_reply.started": "2022-12-20T17:47:07.297006Z"
-        },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -781,18 +709,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "id": "cdea68b7-983a-4341-8fed-a2ac19e8fffb",
       "metadata": {
-        "execution": {
-          "iopub.execute_input": "2022-12-20T17:47:08.869667Z",
-          "iopub.status.busy": "2022-12-20T17:47:08.869466Z",
-          "iopub.status.idle": "2022-12-20T17:47:08.886384Z",
-          "shell.execute_reply": "2022-12-20T17:47:08.885844Z",
-          "shell.execute_reply.started": "2022-12-20T17:47:08.869648Z"
-        },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
