--- a/ipynb/3D_Photo_Inpainting.ipynb
+++ b/ipynb/3D_Photo_Inpainting.ipynb
@@ -24,10 +24,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -48,10 +47,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "collapsed": true
-      },
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "from subprocess import getoutput\n",
@@ -128,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -136,8 +133,7 @@
         },
         "id": "5o-EIMeaghU0",
         "outputId": "338213a6-fd98-4320-a07d-3ec55640123f",
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -165,15 +161,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 901
         },
         "id": "cOFIBkWrBlNM",
-        "outputId": "4e1f3e23-96e0-4baf-dd33-bff9d7dd6c6d",
-        "collapsed": true
+        "outputId": "4e1f3e23-96e0-4baf-dd33-bff9d7dd6c6d"
       },
       "outputs": [],
       "source": [
@@ -196,10 +191,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
-        "id": "S9TmdOBRDXcV",
-        "collapsed": true
+        "id": "S9TmdOBRDXcV"
       },
       "outputs": [],
       "source": [
@@ -219,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -240,8 +234,7 @@
           }
         },
         "id": "n-Kl6fo1oows",
-        "outputId": "f9f25a18-b8a5-49eb-f196-3775f0125050",
-        "collapsed": true
+        "outputId": "f9f25a18-b8a5-49eb-f196-3775f0125050"
       },
       "outputs": [],
       "source": [
@@ -276,15 +269,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "i5-MWEjfBjYx",
-        "outputId": "6f799439-43c0-4985-9f9b-5c2a44fb709f",
-        "collapsed": true
+        "outputId": "6f799439-43c0-4985-9f9b-5c2a44fb709f"
       },
       "outputs": [],
       "source": [
