--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -27,8 +27,7 @@
         "jupyter": {
           "source_hidden": true
         },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -68,8 +67,7 @@
       "execution_count": null,
       "id": "ef32d892-2010-4a1c-b429-7ad98a1ac17a",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -98,8 +96,7 @@
         "jupyter": {
           "source_hidden": true
         },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -163,8 +160,7 @@
           "source_hidden": true
         },
         "scrolled": true,
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -269,11 +265,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "21d7715e-fac6-4e37-aac4-72dee6409a5f",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -314,8 +309,7 @@
           "source_hidden": true
         },
         "scrolled": true,
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -348,8 +342,7 @@
           "source_hidden": true
         },
         "scrolled": true,
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -376,8 +369,7 @@
       "execution_count": null,
       "id": "43bd2fb8-e193-4b6f-8530-d4b93cff5a19",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
