--- a/ipynb/OneClick-update-extensions.ipynb
+++ b/ipynb/OneClick-update-extensions.ipynb
@@ -28,8 +28,7 @@
         "jupyter": {
           "source_hidden": true
         },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
