--- a/start.ipynb
+++ b/start.ipynb
@@ -13,14 +13,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "6e5dde11-3f7f-4de4-adaa-0b4789b43e4f",
       "metadata": {
         "jupyter": {
           "source_hidden": true
         },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -50,15 +49,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "00dd9b50-bdfe-4b88-8c94-acd210229c98",
       "metadata": {
         "jupyter": {
           "source_hidden": true
         },
         "scrolled": true,
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -78,14 +76,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "b0c35408-f527-40a4-a8b0-6adfddc92a26",
       "metadata": {
         "jupyter": {
           "source_hidden": true
         },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -112,12 +109,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "3b09a11d-453a-411e-8a25-67a8a7e9d039",
       "metadata": {
         "scrolled": true,
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -135,11 +131,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "ac532e3b-e4a7-4779-b41b-042c89c80d94",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -157,11 +152,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "7f82ddd8-ca59-4afa-8c92-b60c209a7bb0",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -184,8 +178,7 @@
         "jupyter": {
           "source_hidden": true
         },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
