--- a/tools/installOneClick-stable-diffusion.ipynb
+++ b/tools/installOneClick-stable-diffusion.ipynb
@@ -19,8 +19,7 @@
         "jupyter": {
           "source_hidden": true
         },
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -226,8 +225,7 @@
           "source_hidden": true
         },
         "scrolled": true,
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
