--- a/tools/notebookHub.ipynb
+++ b/tools/notebookHub.ipynb
@@ -13,11 +13,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "2b9c8fe4-ab0e-43e3-9983-9487044b951b",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -47,12 +46,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "eff3185f-7c98-4f0a-a641-7ae7f4731f8e",
       "metadata": {
         "scrolled": true,
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -71,11 +69,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "7556bfc0-c3b3-42fd-bc19-6a262252444d",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
