--- a/ipynb/OneClick-install-extensions.ipynb
+++ b/ipynb/OneClick-install-extensions.ipynb
@@ -25,8 +25,7 @@
       "execution_count": null,
       "id": "03beeabc-da55-47bb-95ef-9675127ee7ca",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -105,11 +104,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "4d19aa84-c880-436e-a082-4c785f7d97a4",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -136,8 +134,7 @@
       "execution_count": null,
       "id": "af86bebd-53c3-4e62-ab28-5ff740deb418",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -166,8 +163,7 @@
       "execution_count": null,
       "id": "0e8993e1-9e76-458c-8fd5-f2bf27ee841c",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -197,8 +193,7 @@
       "execution_count": null,
       "id": "51b17a60-fdfc-4a0a-83a7-441ec260e11d",
       "metadata": {
-        "tags": [],
-        "collapsed": true
+        "tags": []
       },
       "outputs": [],
       "source": [
