add source hidden

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -648,9 +648,20 @@
         "    with open(inputFilePath, \"r\") as f:\n",
         "        notebook_data = json.load(f)\n",
         "\n",
-        "    # \u7528\u66f4\u65b0\u540e\u7684\u503c\u66ff\u6362\u53d8\u91cf\u8d4b\u503c\n",
+        "    # \u904d\u5386\u6240\u6709\u5355\u5143\u683c\n",
         "    for cell in notebook_data[\"cells\"]:\n",
+        "        # \u5bf9\u4ee3\u7801\u5355\u5143\u683c\u8fdb\u884c\u64cd\u4f5c\n",
         "        if cell[\"cell_type\"] == \"code\":\n",
+        "            \n",
+        "            cell[\"metadata\"]={\n",
+        "                \"collapsed\": True,\n",
+        "                \"jupyter\": {\n",
+        "                    \"outputs_hidden\": True,\n",
+        "                    \"source_hidden\": True\n",
+        "                },\n",
+        "                \"tags\": []\n",
+        "            }\n",
+        "            \n",
         "            for i in range(len(cell[\"source\"])):\n",
         "                for var, val in var_map.items():\n",
         "                    if isinstance(val, str):\n",
