--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -277,7 +277,8 @@
         "    symlink_file = f\"{symlink_path}/{symlink_name}\"\n",
         "\n",
         "    # \u5982\u679c\u8f6f\u94fe\u63a5\u6587\u4ef6\u5b58\u5728\uff0c\u5219\u5148\u5220\u9664\u5b83\n",
-        "    os.remove(symlink_file)\n",
+        "    if os.path.islink(symlink_file):\n",
+        "        os.remove(symlink_file)\n",
         "\n",
         "    # \u521b\u5efa\u8f6f\u94fe\u63a5\n",
         "    os.symlink(source_path, symlink_file)\n",
