Fix numbers represented in scientific notation

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -531,6 +531,25 @@
         "                # if original in line:\n",
         "                #     # \u66ff\u6362python\u8def\u5f84\n",
         "                #     cell[\"source\"][i] = re.sub(r'/usr/local/lib/python3.8/', '/usr/local/lib/python/', original)\n",
+        "                \n",
+        "    # \u904d\u5386\u6240\u6709\u5355\u5143\u683c\uff0c\u53bb\u6389\u79d1\u5b66\u8ba1\u6570\u6cd5\u8868\u793a\u7684\u6570\u5b57\u7684\u53cc\u5f15\u53f7\uff0c\u5e76\u4e14\u4fdd\u7559\u6bcf\u4e2a\u6570\u5b57\u4e24\u8fb9\u7684\u4e2d\u62ec\u53f7\n",
+        "    for cell in nb['cells']:\n",
+        "        # \u5982\u679c\u5355\u5143\u683c\u662f\u4ee3\u7801\u5355\u5143\u683c\n",
+        "        if cell['cell_type'] == 'code':\n",
+        "            # \u904d\u5386\u6240\u6709\u884c\n",
+        "            for i, line in enumerate(cell['source']):\n",
+        "                # \u5339\u914d\u79d1\u5b66\u8ba1\u6570\u6cd5\u8868\u793a\u7684\u6570\u5b57\uff08\u5982 \"1e-6\"\uff09\n",
+        "                match = re.match(r'.*\"\\d+e-\\d+\".+', line)\n",
+        "                # \u5982\u679c\u5339\u914d\u6210\u529f\n",
+        "                if match:\n",
+        "                    # \u83b7\u53d6\u5339\u914d\u7684\u6587\u672c\n",
+        "                    text = match.group()\n",
+        "                    # \u5c06\u6587\u672c\u4e2d\u7684\u53cc\u5f15\u53f7\u53bb\u6389\n",
+        "                    new_text = re.sub(r'\"([\\d.]+e[+-]\\d+)\"',r'\\1', text)\n",
+        "                    print(text)\n",
+        "                    print(new_text)\n",
+        "                    # \u5c06\u6587\u672c\u66ff\u6362\u56de\u539f\u6765\u7684\u4f4d\u7f6e\n",
+        "                    cell['source'][i] = line.replace(match.group(), new_text) \n",
         "\n",
         "    # \u4fdd\u5b58\u4fee\u6539\u540e\u7684notebook\n",
         "    newNotebook = modify_file_name(notebook)\n",
